--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   get: ^4.6.5
   provider: ^6.0.5
   path: ^1.8.3
+  kakao_map_plugin: ^0.1.6
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
@@ -71,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/.env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
