--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,6 +48,7 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
     <key>NSAppTransportSecurity</key>
+	<!-- 지도 환경설정 -->
     <dict>
         <key>NSAllowsArbitraryLoads</key>
         <true/>
@@ -56,5 +57,10 @@
     </dict>
     <key>io.flutter.embedded_views_preview</key>
     <true/>
+	<!-- 사용자 gps 환경설정 -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to location when open.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs access to location when in the background.</string>
 </dict>
 </plist>
