--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   kakao_map_plugin: ^0.1.6
   flutter_dotenv: ^5.1.0
   geolocator: ^9.0.2
+  syncfusion_flutter_charts: ^22.2.7
 
 
 dev_dependencies:
