--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   geolocator: ^9.0.2
   syncfusion_flutter_charts: ^22.2.7
+  google_maps_flutter: ^2.4.0
 
 
 dev_dependencies:
