--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,11 @@ dependencies:
   geolocator: ^9.0.2
   syncfusion_flutter_charts: ^22.2.7
   google_maps_flutter: ^2.4.0
+  flutter_native_splash: ^2.3.1
 
+flutter_native_splash:
+  color: "#f5cb42"
+  image: images/marker.png
 
 dev_dependencies:
   flutter_test:
