--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   syncfusion_flutter_charts: ^22.2.7
   google_maps_flutter: ^2.4.0
   flutter_native_splash: ^2.3.1
+  animated_splash_screen: ^1.3.0
 
 flutter_native_splash:
   color: "#f5cb42"
