--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_maps_flutter: ^2.4.0
   flutter_native_splash: ^2.3.1
   animated_splash_screen: ^1.3.0
+  kakao_flutter_sdk: ^1.5.0         
 
 flutter_native_splash:
   color: "#f5cb42"
